fixed gradients on firefox

--- a/kaltura-style.css
+++ b/kaltura-style.css
@@ -187,8 +187,8 @@ form input.kaltura-button2 {
 	);
 	background-image: -moz-linear-gradient(
 		center top,
-		#068ea2 12%,
-		rgba(0,0,0,.25) 88%%
+		#068ea2,
+		rgba(0,0,0,.25)
 	);
 }
 form input.kaltura-button2:hover {
@@ -271,6 +271,19 @@ nav li {
 {
 	background-color: #21879d;
 	margin-bottom: 90px;
+	background-color: #068ea2;
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(1, rgba(0,0,0,.05)),
+		color-stop(0, #068ea2)
+	);
+	background-image: -moz-linear-gradient(
+		center top,
+		rgba(0,0,0,.15),
+		#068ea2
+	);
 }
 #kaltura-content-menu {
 	height:54px;
@@ -300,7 +313,7 @@ nav li {
 }
 #kaltura-masthead-menu a.selected
 {
-    color: #21879d;
+    color: #E34C26;
 	font-weight: bold;
 	text-decoration: underline;
 	/* no background right now
@@ -379,6 +392,20 @@ nav li {
 	background-color: #21879d;
 	margin-top: 90px;
 	padding-bottom:64px;
+	background-color: #068ea2;
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0, #068ea2),
+
+		color-stop(1, rgba(0,0,0,.25))
+	);
+	background-image: -moz-linear-gradient(
+		center top,
+		#068ea2,
+		rgba(0,0,0,.25)
+	);
 }
 #kaltura-footer-remarks
 {
@@ -429,8 +456,19 @@ nav li {
 	margin-top: 24px;
 	border:0;
     height: 1px;
-    background: red;
-    background: -webkit-gradient(linear, 0 0, 100% 0, from( rgba(0,205,255, 0) ), to( rgba(0,205,255, 0) ), color-stop(10%,  rgba(15,162,187, .9) ), color-stop(90%,  rgba(15,162,187, .9) ));
+    background: rgb(15,162,187);
+    background: 
+		-webkit-gradient(
+			linear, 
+			0 0, 
+			100% 0, 
+			from( rgba(0,205,255, 0) ), 
+			to( rgba(0,205,255, 0) ), 
+			color-stop(10%,  rgba(15,162,187, .9) ), 
+			color-stop(90%,  rgba(15,162,187, .9) )
+		);
+	background: -moz-linear-gradient(left, 
+		rgba(15,162,187,.25), rgba(255,255,255,.25), rgba(255,255,255,.25), rgba(255,255,255,.25), rgba(15,162,187,.25));
 }
 .kaltura-footer-list {
 display:inline;
